@startuml
'https://plantuml.com/class-diagram

class Main
Main ..> DependencyContainer

class Statistics
Statistics -- Field

class GameLoop
Config <.. GameLoop
GameLoop -- SimulationCanvas

class Field
Config <.. Field
Field ..> Rabbit
Field ..> Fox
Field ..> Food
Field *-- FieldEntity

abstract class FieldEntity
FieldEntity -- DrawingComponent
FieldEntity -- Field
FieldEntity <|-- Animal
FieldEntity <|-- Food

abstract class Animal
Animal -- MoveComponent
Animal -- PositionComponent

interface DrawingComponent
FieldEntity <.. DrawingComponent

interface MoveComponent
Animal <.. MoveComponent

interface PositionComponent
Animal <.. PositionComponent

class DefaultDrawingComponent
DrawingComponent <|.. DefaultDrawingComponent
Config <.. DefaultDrawingComponent

class DefaultPositionComponent
PositionComponent <|.. DefaultPositionComponent
Config <.. DefaultPositionComponent

class RabbitMoveComponent
MoveComponent <|.. RabbitMoveComponent
Config <.. RabbitMoveComponent

class FoxMoveComponent
MoveComponent <|.. FoxMoveComponent
Config <.. FoxMoveComponent

class Rabbit
Animal <|-- Rabbit
DefaultDrawingComponent <.. Rabbit
RabbitMoveComponent <.. Rabbit
DefaultPositionComponent <.. Rabbit

class Fox
Animal <|-- Fox
DefaultDrawingComponent <.. Fox
FoxMoveComponent <.. Fox
DefaultPositionComponent <.. Fox

class StatisticsPanel
StatisticsPanel -- Statistics

class SimulationCanvas
Config <.. SimulationCanvas
SimulationCanvas -- Field

class MainWindow
MainWindow ..> SimulationCanvas
MainWindow ..> ControlPanel
MainWindow ..> StatisticsPanel
MainWindow ..> GameLoop

class ControlPanel
ControlPanel ..> Field
ControlPanel ..> GameLoop

class Config
ConfigValue <.. Config

enum ConfigValue

@enduml
